--- a/package.json
+++ b/package.json
@@ -1,17 +1,52 @@
 {
+  "name": "do-re-mi-website",
+  "version": "1.0.0",
+  "description": "A feature-rich social collaboration platform for music, design, and development. The 'do re mi' website integrates tools for creatives to connect, collaborate, and showcase their work, with features inspired by popular social platforms and tailored for award shows, schools, churches, and the fashion industry. Built with dynamic functionality, engaging user experiences, and a focus on creativity at every level.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dmarquesc/do-re-mi-website.git"
+  },
+  "keywords": [
+    "music",
+    "collaboration",
+    "social-media",
+    "DAW",
+    "web-audio",
+    "creative-platform",
+    "socket.io"
+  ],
+  "author": "D. Coleman",
+  "license": "MIT",
+  "type": "module",
+  "bugs": {
+    "url": "https://github.com/dmarquesc/do-re-mi-website/issues"
+  },
+  "homepage": "https://github.com/dmarquesc/do-re-mi-website#readme",
   "dependencies": {
     "@magenta/music": "^1.23.1",
     "@tensorflow/tfjs": "^2.8.6",
-    "@tensorflow/tfjs-backend-webgl": "^2.8.6",
-    "coffeescript": "^2.7.0",
-    "mkdirp": "^3.0.1",
-    "ndarray-resample": "^1.0.1",
+    "express": "^4.21.2",
+    "minimist": "^1.2.8",
+    "seedrandom": "^2.4.4",
     "simple-peer": "^9.11.1",
+    "socket.io": "^4.8.1",
+    "speaker": "^0.5.5",
     "three": "^0.173.0",
     "tonal-array": "^2.2.2",
     "tone": "^15.0.4",
+    "underscore": "^1.13.7",
     "wavesurfer.js": "^7.9.1",
     "web-audio-api": "^0.2.2",
-    "webrtc-adapter": "^9.0.1"
+    "dotenv": "^16.3.1",
+    "cors": "^2.8.5",
+    "nodemon": "^3.0.1"
   }
 }
+
+
